correcao do link

--- a/angular-microsites/src/app/app.component.html
+++ b/angular-microsites/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="w-full overflow-hidden h-64 flex items-center justify-center rounded-lg">
         <img [src]="'/images/banner.png' | baseUrl" alt="banner" class="w-full">
       </div>
-      <a href="/" class="-mt-24 bg-gray-100 overflow-hidden border-6 border-white shadow-lg w-32 h-32 rounded-full p-3">
+      <a [href]="'/' | baseUrl" class="-mt-24 bg-gray-100 overflow-hidden border-6 border-white shadow-lg w-32 h-32 rounded-full p-3">
         <img [src]="'/images/logo.png' | baseUrl" alt="Logo" class="w-full">
       </a>
       <h1 class="text-xl font-bold mb-4 align-center uppercase text-gray-700">Condomínio TSC 1 - Cambé</h1>
